# resonance-dlmm-saros

./: Anchor.toml  README.md  package-lock.json  txtx.yml
backend/: package-lock.json  package.json
backend/config/: database.js
programs/resonance-bot/: Cargo.toml
programs/resonance-bot/src/: error.rs  lib.rs  saros_dlmm.rs
programs/resonance-bot/src/instructions/: execute_arbitrage.rs  initialize_vault.rs  manage_vault.rs  mod.rs
programs/resonance-bot/src/state/: mod.rs  pool_state.rs  vault.rs
programs/resonance-bot/src/utils/: mod.rs  optimal_amount.rs  saros_cpi.rs
runbooks/: README.md
runbooks/deployment/: main.tx
runbooks/deposit-funds/: main.tx
runbooks/execute-arbitrage/: main.tx  signers.surfnet.tx
runbooks/initialize-vault/: main.tx
surfpool/: surfpool.toml
tests/: resonance-bot.ts
tests/test-keys/: user.json
