[package]
name = "resonance-bot"
version = "0.1.0"
description = "Intra-pool arbitrage system for Saros DLMM pools"
edition = "2021"
authors = ["Amalnath <x.com/amalnathsathyan>"]
repository = "https://github.com/amalnathsathyan/resonance-bot"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "resonance_bot"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# Core Anchor dependencies (production standard)
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

# Serialization (production standard)
borsh = { version = "1.5.7", features = ["derive"] }

# Math libraries (production standard)  
fixed = "1.28.0"
num-traits = "0.2"

# Error handling
thiserror = "1.0"

# Optional: If you decide to add zero-copy later
# bytemuck = { version = "1.23.2", features = ["min_const_generics"] }
# bytemuck_derive = "1.10.1"

[dev-dependencies]
# Test dependencies
anchor-client = "0.31.1"
solana-sdk = "~2.1.0"
tokio = { version = "1", features = ["full"] }
